# xserver

./: .gitlab-ci.yml  meson.build  meson_options.txt
.github/: milestone.yml
.github/scripts/: conf.sh  install-prereq.sh  util.sh
.github/scripts/macos/: install-pkg.sh
.github/scripts/mingw32/: cross-prereqs-build.sh
.github/workflows/: build-xserver.yml  conflict-notify.yml  milestones.yml
.gitlab-ci/: debian-install.sh
Xext/: bigreq.c  dpms.c  geext.c  geext.h  meson.build  myextension.c  panoramiX.c  panoramiX.h  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  saver.c  security.c  shape.c  shm.c  shmint.h  sync.c  vidmode.c  xcmisc.c  xf86bigfont.c  xres.c  xselinux_ext.c  xselinux_hooks.c  xtest.c  xvdisp.c  xvmain.c  xvmc.c
Xext/namespace/: TODO  hook-clientstate.c  hook-property.c  hook-receive.c  hook-resource.c  hook-selection.c  hook-send.c  hook-windowproperty.c  hooks.h  namespace.c  namespace.h
Xi/: allowev.c  allowev.h  chgdctl.c  chgdctl.h  chgfctl.h  chgkmap.h  chgprop.h  chgptr.c  chgptr.h  closedev.c  exevents.c  exglobals.h  extinit.c  getbmap.c  getdctl.c  getdctl.h  getfctl.c  getfocus.c  getkmap.c  getmmap.c  getprop.c  getprop.h  getselev.c  getselev.h  getvers.c  getvers.h  grabdev.c  grabdev.h  grabdevb.c  grabdevb.h  grabdevk.c  grabdevk.h  gtmotion.c  gtmotion.h  listdev.c  opendev.c  queryst.c  selectev.h  sendexev.h  setbmap.c  (+38 more)
composite/: compalloc.c  compext.c  compint.h  compwindow.c
config/: config-backends.h  udev.c
damageext/: damageext.c
dbe/: dbe.c
dix/: colormap.c  colormap_priv.h  cursor.c  devices.c  dispatch.c  dispatch.h  dix_priv.h  dixfonts.c  dixutils.c  enterleave.c  events.c  extension.c  extension_priv.h  getevents.c  inpututils.c  main.c  meson.build  privates.c  property.c  property_priv.h  request_priv.h  rpcbuf_priv.h  screen.c  screenint_priv.h  selection.c  selection_priv.h  window.c
doc/: Xserver-spec.xml
dri3/: dri3.c  dri3_priv.h  dri3_request.c
exa/: exa_priv.h  exa_render.c
glamor/: glamor.c  glamor.h  glamor_core.c  glamor_egl.c  glamor_priv.h  glamor_render.c  glamor_transfer.c
glx/: glxcmds.c  vndcmds.c  vndext.c
hw/kdrive/ephyr/: ephyr.c  hostx.c
hw/kdrive/src/: kdrive.c  (+1 more)
hw/vfb/: InitInput.c  InitOutput.c
hw/xfree86/: meson.build  sdksyms.sh
hw/xfree86/drivers/video/apm/: meson.build
hw/xfree86/drivers/video/apm/man/: apm.man
hw/xfree86/drivers/video/apm/src/: apm.h  apm_cursor.c  apm_dga.c  apm_driver.c  apm_i2c.c
hw/xfree86/drivers/video/ast/: meson.build
hw/xfree86/drivers/video/ast/src/: ast.h  ast_2dtool.c  ast_accel.c  ast_cursor.c  ast_driver.c  ast_mode.c  ast_tool.c  ast_vgatool.c
hw/xfree86/drivers/video/chips/: meson.build
hw/xfree86/drivers/video/chips/man/: chips.man
hw/xfree86/drivers/video/chips/src/: compat-api.h  ct_accel.c  ct_bank.c  ct_cursor.c  ct_ddc.c  ct_dga.c  ct_driver.c  ct_driver.h  ct_exa.c  ct_regs.c  ct_shadow.c  ct_video.c
hw/xfree86/drivers/video/chips/util/: meson.build
hw/xfree86/drivers/video/cirrus/: meson.build
hw/xfree86/drivers/video/cirrus/man/: cirrus.man
hw/xfree86/drivers/video/cirrus/src/: CirrusClk.c  alp.h  alp_driver.c  alp_hwcurs.c  alp_i2c.c  cir.h  cir_dga.c  cir_driver.c  cir_pcirename.h  cir_shadow.c  lg.h  lg_driver.c  lg_hwcurs.c  lg_i2c.c
hw/xfree86/drivers/video/dummy/: meson.build
hw/xfree86/drivers/video/dummy/src/: dummy.h  dummy_cursor.c  dummy_driver.c
hw/xfree86/drivers/video/fbdev/: README.md  meson.build
hw/xfree86/drivers/video/fbdev/man/: fbdev.man
hw/xfree86/drivers/video/fbdev/src/: fbdev.c
hw/xfree86/drivers/video/geode/: NEWS  README  meson.build
hw/xfree86/drivers/video/geode/src/: cimarron.c  compat-api.h  durango.c  geode.h  geode_common.c  geode_dcon.c  geode_ddc.c  geode_driver.c  geode_fourcc.h  geode_msr.c  gx_cursor.c  gx_driver.c  gx_exa.c  gx_randr.c  gx_regacc.c  gx_rotate.c  gx_vga.c  gx_video.c  lx_cursor.c  lx_display.c  lx_driver.c  lx_exa.c  lx_memory.c  lx_output.c  lx_panel.c  lx_video.c  panel.c  z4l.c
hw/xfree86/drivers/video/geode/src/cim/: cim_defs.h  cim_df.c  cim_gp.c  cim_init.c  cim_msr.c  cim_parm.h  cim_rtns.h  cim_vg.c  cim_vip.c  cim_vop.c
hw/xfree86/drivers/video/geode/src/gfx/: disp_gu1.c  disp_gu2.c  gfx_defs.h  gfx_init.c  gfx_msr.c  gfx_priv.h  gfx_type.h  gfx_vid.c  msr_rdcl.c  tv_fs450.c  vga_gu1.c  vid_1200.c  vid_rdcl.c
hw/xfree86/drivers/video/geode/src/panel/: cen9211.c  dora9211.c  drac9210.c  gx2_9211.c  platform.c  pnl_init.c
hw/xnest/: Init.c  Screen.c  Window.c
hw/xquartz/: applewm.c  darwin.c  quartz.c  quartzRandR.c
hw/xwayland/: xwayland-drm-lease.c  xwayland-input.c  xwayland-input.h  xwayland-screen.c  xwayland.c
hw/xwin/: winmultiwindowwindow.c
include/: client.h  colormap.h  displaymode.h  dix.h  dixstruct.h  extinit_priv.h  inputstr.h  meson.build  misc.h  os.h  privates.h  protocol-versions.h  scrnintstr.h  vidmodestr.h  windowstr.h  xorg-server.h.meson.in
mi/: mi.h  mi_priv.h  micmap.c  micmap.h  midispcur.c  miinitext.c  miscanfill.h  miscrinit.c  mivalidate.h
miext/: extinit_priv.h
miext/damage/: damage.c  damage.h  damagestr.h
miext/rootless/: rootless.h  rootlessCommon.h  rootlessConfig.h  rootlessWindow.c  rootlessWindow.h
miext/shadow/: shrotpack.h
miext/sync/: misync.h  misyncstr.h
os/: WaitFor.c  Xtrans.c  Xtrans.h  Xtransint.h  Xtranslcl.c  Xtranssock.c  Xtransutil.c  backtrace.c  ddx_priv.h  io.c  log.c  meson.build  osdep.h  osinit.c  ospoll.c  probes_priv.h  utils.c
present/: present_scmd.c  present_screen.c
randr/: randr.c  randrstr.h  rrcrtc.c  rrdispatch.c  rroutput.c  rrproperty.c  rrprovider.c  rrproviderproperty.c  rrsdispatch.c  rrxinerama.c
record/: record.c
render/: animcur.c  filter.c  glyph.c  picture.c  render.c
test/: misc.c
test/xi2/: protocol-common.h  protocol-xigetselectedevents.c  protocol-xiquerydevice.c  protocol-xiqueryversion.c  protocol-xiselectevents.c  protocol-xisetclientpointer.c
xfixes/: cursor.c  disconnect.c  region.c  saveset.c  select.c  xfixes.c  xfixes.h  xfixesint.h
xkb/: XKBMisc.c  ddxLoad.c  xkb.c  xkbDflts.h  xkbInit.c
(+34 files in other folders)
