dRegs = executable(
    'dRegs',
    [ 'dRegs.c' ],
    install: true,
)

mRegs = executable(
    'mRegs',
    [ 'mRegs.c' ],
    install: true,
)

modClock = executable(
    'modClock',
    [ 'modClock.c' ],
    install: true,
)

memClock = executable(
    'memClock',
    [ 'modClock.c' ],
    install: true,
)
